--- a/index.Rmd
+++ b/index.Rmd
@@ -782,6 +782,47 @@ class: bg-main2, center
 knitr::include_graphics("figures/algorithm/tas_9end.png")
 ```
 
+
+---
+
+class: bg-main2, center
+
+# Using sugarbag
+.pull-left[
+
+```{r, echo = TRUE, eval = FALSE}
+# Create centroids set
+centroids <- create_centroids(tas_sa2, "sa2_name_2011")
+
+# Create hexagon location grid
+grid <- create_grid(centroids = centroids,
+   hex_size = 0.2, buffer_dist = 1.2)
+
+# Allocate polygon centroids to hexagon grid points
+allocated <- allocate(
+   centroids = centroids,
+   sf_id = "sa2_name_2011",
+   hex_grid = grid,
+   hex_size = 0.2, # same size used in create_grid
+   hex_filter = 1,
+   width = 30,
+   focal_points = capital_cities,
+   verbose = TRUE
+ )
+
+# same column used in create_centroids
+ fortify_hexagon(data = allocated,
+   sf_id = "sa2_name_2011", 
+   hex_size = 0.2)
+
+```
+]
+.pull-right[
+## - Choose closest point
+## - Angle maintains the spatial relationship
+
+]
+
 ---
 
 class: split-50 center
