--- a/index.Rmd
+++ b/index.Rmd
@@ -51,7 +51,7 @@ class: bg-main1 split-30
 # Superisory Team
 <br>
 
-## Distinguished Professor Kerrie Mengersen
+## Professor Kerrie Mengersen
 
 <br>
 
@@ -256,7 +256,7 @@ knitr::include_graphics("figures/aus_ggchoro.png")
 [package: sf](https://cran.r-project.org/web/packages/sf/index.html)
 ]
 ]]
-.column.bg-main3[.content.middle[
+.column.bg-main4[.content.middle[
 <br><br>
 
 #Features:
@@ -293,7 +293,7 @@ knitr::include_graphics("figures/aus_ggcont.png")
 ]
 
 ]]
-.column.bg-main3[.content.middle[
+.column.bg-main4[.content.middle[
 <br><br>
 
 #Features:
@@ -324,7 +324,7 @@ knitr::include_graphics("figures/aus_ggncont.png")
 ]
 
 ]]
-.column.bg-main3[.content.middle[
+.column.bg-main4[.content.middle[
 <br><br>
 
 #Features:
@@ -358,7 +358,7 @@ knitr::include_graphics("figures/aus_ggdorl.png")
 ]
 
 ]]
-.column.bg-main3[.content.middle[
+.column.bg-main4[.content.middle[
 <br><br>
 
 #Features:
@@ -463,7 +463,7 @@ knitr::include_graphics("figures/ggtilegram.png")
 ]
 
 ]]
-.column.bg-main3[.content.middle[
+.column.bg-main4[.content.middle[
 <br>
 #Features:
 ### - Shapes are consistent
@@ -497,7 +497,7 @@ knitr::include_graphics("figures/ggfacet.png")
 ]
 
 ]]
-.column.bg-main3[.content.middle[
+.column.bg-main4[.content.middle[
 <br><br>
 #Features:
 ### - Any visualisation can be drawn
@@ -785,42 +785,51 @@ knitr::include_graphics("figures/algorithm/tas_9end.png")
 
 ---
 
-class: bg-main2, center
-
+class: split-50 bg-deep-green
 # Using sugarbag
-.pull-left[
-# Scenic Route
+
+.left-code[
+
+### 1. Create centroids set
+```{r, echo = TRUE, eval = FALSE, out.with = "100px"}
+centroids <- create_centroids(
+   tas_sa2, 
+   "sa2_name_2011")
+```
+<br>
+### 2. Create hexagon grid
+```{r, echo = TRUE, eval = FALSE, out.with = "100px"}
+grid <- create_grid(
+   centroids = centroids, 
+   hex_size = 0.2, 
+   buffer_dist = 1.2)
+```
+]
+.pull-right[
+### 3. Allocate polygon centroids
+###  to the hexagon grid 
+
 ```{r, echo = TRUE, eval = FALSE}
-# Create centroids set
-centroids <- create_centroids(tas_sa2, "sa2_name_2011")
-
-# Create hexagon location grid
-grid <- create_grid(centroids = centroids,
-   hex_size = 0.2, buffer_dist = 1.2)
-
-# Allocate polygon centroids to hexagon grid points
 allocated <- allocate(
    centroids = centroids,
    sf_id = "sa2_name_2011",
    hex_grid = grid,
-   hex_size = 0.2, # same size used in create_grid
+   hex_size = 0.2,
    hex_filter = 1,
    width = 30,
    focal_points = capital_cities,
    verbose = TRUE
  )
 
-# same column used in create_centroids
- fortify_hexagon(data = allocated,
-   sf_id = "sa2_name_2011", 
-   hex_size = 0.2)
-
 ```
 ]
-.pull-right[
+
+---
+
+class: bg-main2
 # Shortcut
+
 ```{r, echo = TRUE, eval = FALSE}
-# Create hexmap
 hexmap <- create_hexmap(
    shp = tas_sa2,
    sf_id = "sa2_name_2011",
@@ -828,7 +837,7 @@ hexmap <- create_hexmap(
    verbose = TRUE
 )
 ```
-]
+
 
 ---
 
@@ -998,7 +1007,7 @@ class: bg-deep-green
 ### Dr. Earl Duncan
 
 <br><br>
-### created with xaringan <i class="fas fa-user-ninja"></i>
+### created with xaringan <i class="fas fa-user-ninja"></i> and [kunoichi](https://github.com/emitanaka/ninja-theme)
 
 ### scripts and data available [srkobakian](https://github.com/srkobakian)
 
